2016-10-24  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39706: Completion/Unix/Type/_tilde_files, Doc/Zsh/compsys.yo:
	_tilde_files: Offer named directories. Document.

	* 39708: Completion/Unix/Type/_email_addresses,
	Doc/Zsh/compsys.yo: Document _email_addresses.

	* 39707: Doc/Zsh/compsys.yo: Document _dir_list.

2016-10-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 39715: Src/Zle/complist.c: handle multibyte characters when
	highlighting completion listing.

2016-10-22  Barton E. Schaefer  <schaefer@zsh.org>

	* 39710 (cf. Alex George: 39709): Completion/Base/Completer/_expand,
	Completion/Base/Completer/_user_expand: handle the %o format in the
	"all-expansions" tag; allow a single unique match to appear in the
	"expansions" tag (cf. users/21955).

2016-10-20  Peter Stephenson  <p.stephenson@samsung.com>

	* 39688: Src/pattern.c: Alternative fix: next pointer is
	irrelevant anyway as there's only one P_EXACTLY in a P_PURES.

	* 39683: Src/pattern.c: Update scan pointer in pattern after
	possible reallocation for meta handling.

2016-10-19  Barton E. Schaefer  <schaefer@zsh.org>

	* 39680: Src/mem.c: correctly handle case of popping last arena

2016-10-19  Peter Stephenson  <p.stephenson@samsung.com>

	* 39678: Src/builtin.c, Test/D07multibyte.ztst: printf %q
	argument needs metafying and result unmetafying.

2016-10-18  m0viefreak  <m0viefreak.cm@googlemail.com>

	* 39590: Src/Zle/compresult.c: zle: Call zle-line-pre-redraw
	after inserting a completion result

2016-10-18  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39654: Completion/Unix/Command/_make: (based on patch by
	Baptiste Daroussin) Better support bmake, FreeBSD's default
	make(1) implementation.

	* 39657: Completion/Zsh/Command/_zstyle: Complete the -g,
	-s,-b,-a, -t,-T, -m options.

	* 39657: Completion/Zsh/Command/_zstyle: When completing a
	style for an unrecognised context, complete all known styles.

	* 39657: Completion/Zsh/Command/_zstyle,