@@ -15,6 +15,9 @@ removed, even when /before/here is itself a symbolic link.  It is
 recommended to review uses of ':A' and, if appropriate, convert them
 to ':P' as soon as compatibility with 5.2 is no longer a requirement.
 
+The output of "typeset -p" uses "export" commands or the "-g" option
+for parameters that are not local to the current scope.
+
 Changes from 5.1.1 to 5.2
 -------------------------
 
